--- a/src/style.css
+++ b/src/style.css
@@ -103,6 +103,9 @@ body {
     color: white;
     overflow: hidden;
     float: left;
+    left: 0;
+    position: relative;
+
 }
 
 .tab button {
@@ -114,12 +117,13 @@ body {
     padding: 14px 16px;
     transition: 0.3s;
     font-size: 17px;
-    border-radius: 10px;
     margin: 0;
     margin-left: 10px;
     display: flex;
     flex-direction: row;
-    
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    left: 0;
 }
 
 .contentContainer {
@@ -162,4 +166,88 @@ body {
 
 .tablinks {
     color: white;   
+}
+
+.traitBox {
+    width: 1000px;
+    height: 100px;
+    position: relative;
+    border: 4px solid rgb(59, 59, 59);
+    margin: auto;
+    padding-top: 10px;
+    background-color: rgb(30, 54, 71);
+    border-radius: 20px;
+}
+
+.traitPanelContent {
+    border: 3px solid rgb(32, 31, 31);
+    height: 150px;
+    width: 1000px;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 5px;
+    padding-bottom: 10px;
+    background-color:rgb(59, 59, 59);
+}
+
+#traitInfoResults {
+    overflow-y: scroll;
+    height: 870px;
+    margin-top: 10px;
+}
+
+#traitInfoResults::-webkit-scrollbar {
+    width: 10px;
+}
+
+#traitInfoResults::-webkit-scrollbar-track {
+    background: #2e2d2d11;
+}
+
+#traitInfoResults::-webkit-scrollbar-thumb {
+    background: #444242;
+}
+
+a {
+    color: rgb(190, 188, 188);
+}
+
+.modelInfo {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modelInfoContent {
+    background-color: #1f1f1f;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 80px;
+    font-weight: bold;
+}
+
+.modelInfoContent h1 {
+    color: white;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.modelInfoContent p {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 20px;
 }
